--- a/index.html
+++ b/index.html
@@ -1265,7 +1265,7 @@
         }
 
         .reset-button:hover {
-            transform: rotate(180deg);
+            transform: rotate(5deg);
         }
 
         /* Title and Logo Animations */
@@ -1323,6 +1323,8 @@
             justify-content: center;
             gap: 0.5rem;
         }
+
+        .reset-button{font-size:10px;color:#ffffff;}
     </style>
 </head>
 <body>
@@ -1496,7 +1498,7 @@
         <button class="leaderboard-button" onclick="toggleLeaderboard(true)">🏅</button>
         <button class="profile-button" onclick="toggleProfile(true)">👤</button>
         <button class="mute-button">🔊</button>
-        <button class="reset-button" onclick="resetGame()">🔄</button>
+        <button class="reset-button" onclick="resetGame()">📉 DECLARE BANKRUPTCY</button>
         <h1>
             <div class="logo-wrapper">
                 <span class="sparkle">✨</span>
@@ -2325,7 +2327,7 @@
         }
 
         function resetGame() {
-            if (confirm('Are you sure you want to reset the game? This will clear your progress and set your balance back to 500 coins.')) {
+            if (confirm('Are you sure you want to declare bankruptcy? This will clear your progress and set your balance back to 500 coins.')) {
                 localStorage.removeItem('scroggysCasino_gameState');
                 location.reload();
             }
