--- a/index.html
+++ b/index.html
@@ -1555,7 +1555,7 @@
             '🌮': 500,              // Taco - 500
             '🍩': 1000,             // Donut - 1k
             '🤮': 5000,             // Barf - 5k
-            '🤑': 100000,           // Money Face - 100k
+            '🤑': 1000000000,           // Money Face - 100 Trillion
             '🥒': 2500              // Pickle - 2.5k
         };
 
