--- a/index.html
+++ b/index.html
@@ -1239,20 +1239,39 @@
             border: 1px dashed #ffa500;
         }
 
+        /* Updated reset button styling */
         .reset-button {
-            position: absolute;
-            top: 10px;
-            right: 100px;
-            background: none;
-            border: none;
-            font-size: 24px;
+            position: static; /* Remove absolute positioning */
+            background: #000000;
+            color: #ffffff;
+            border: 1px solid #333333;
+            border-radius: 5px;
+            font-size: 11px;
+            padding: 4px 8px;
+            margin-top: 5px;
             cursor: pointer;
-            padding: 5px;
-            transition: transform 0.3s ease;
+            transition: all 0.3s ease;
+            font-family: var(--font-family);
+            opacity: 0.6;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            width: auto;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
         }
 
         .reset-button:hover {
-            transform: rotate(5deg);
+            opacity: 1;
+            transform: scale(1.05);
+            background: #333333;
+            box-shadow: 0 0 10px rgba(255, 0, 0, 0.3);
+        }
+        
+        .reset-button-container {
+            margin-top: 5px;
+            text-align: center;
+            width: 100%;
         }
 
         /* Title and Logo Animations */
@@ -1310,8 +1329,6 @@
             justify-content: center;
             gap: 0.5rem;
         }
-
-        .reset-button{font-size:10px;color:#ffffff;}
 
         @keyframes flash-border {
             0% { box-shadow: 0 0 20px rgba(255, 0, 0, 0.5); }
@@ -1531,7 +1548,6 @@
         <button class="leaderboard-button" onclick="toggleLeaderboard(true)">🏅</button>
         <button class="profile-button" onclick="toggleProfile(true)">👤</button>
         <button class="mute-button">🔊</button>
-        <button class="reset-button" onclick="resetGame()">📉 DECLARE BANKRUPTCY</button>
         <h1>
             <div class="logo-wrapper">
                 <span class="sparkle">✨</span>
@@ -1563,6 +1579,9 @@
             </button>
         </div>
         <div class="message" id="message">Let's GO!</div>
+        <div class="reset-button-container">
+            <button class="reset-button" onclick="resetGame()">📉 Declare Bankruptcy</button>
+        </div>
         <div class="jackpot-animation" id="jackpot-animation"></div>
     </div>
     <div class="devil-popup" id="devil-popup">
