--- a/casino/index.html
+++ b/casino/index.html
@@ -90,6 +90,32 @@
             animation: twinkle 2s infinite;
         }
 
+        .back-button {
+            position: fixed;
+            top: 15px;
+            left: 15px;
+            background-color: rgba(50, 50, 100, 0.7);
+            color: white;
+            border: none;
+            border-radius: 50%;
+            width: 40px;
+            height: 40px;
+            font-size: 18px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            text-decoration: none;
+            z-index: 1000;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+            transition: background-color 0.2s, transform 0.2s;
+        }
+        
+        .back-button:hover {
+            background-color: rgba(70, 70, 140, 0.9);
+            transform: scale(1.05);
+        }
+
         :root {
             --machine-padding: clamp(15px, 4vw, 30px);
             --reel-size: clamp(80px, 20vw, 100px);
@@ -1378,6 +1404,8 @@
     </style>
 </head>
 <body>
+    <a href="/" class="back-button" title="Back to ScroggyGames.com">←</a>
+    
     <div class="aurora-container">
         <div class="aurora"></div>
     </div>
