--- a/scroggy-clicker/index.html
+++ b/scroggy-clicker/index.html
@@ -787,7 +787,7 @@
     </style>
 </head>
 <body>
-    <a href="/" class="back-button" title="Back to ScroggyGames.com">←</a>
+    <a href="/" class="back-button" title="Back to Scroggy">←</a>
     
     <!-- Name input modal -->
     <div class="modal-overlay" id="nameModal">
