--- a/index.html
+++ b/index.html
@@ -498,6 +498,12 @@
                 <div class="game-title">Wizard Clicker</div>
                 <div class="game-description">Click your way to magical power!</div>
             </a>
+            
+            <a href="/wheeliepoppers/" class="game-card">
+                <div class="game-icon">♿</div>
+                <div class="game-title">Wheelie Poppers</div>
+                <div class="game-description">Epic wheelchair fighting game with stomp mechanics!</div>
+            </a>
         </div>
     </div>
     
