--- a/wheeliepoppers/index.html
+++ b/wheeliepoppers/index.html
@@ -14,23 +14,23 @@
             <div id="player2" class="character punk"></div>
         </div>
         <div class="ui">
-            <div class="health-bars">
+            <div class="health-bars">  
                 <div class="health-bar">
-                    <div class="label">NERD</div>
-                    <div class="bar">
-                        <div id="p1-health" class="health"></div>
-                    </div>
-                </div>
-                <div class="health-bar">
-                    <div class="label">PUNK</div>
+                    <div class="label">LUIGI</div>
                     <div class="bar">
                         <div id="p2-health" class="health"></div>
                     </div>
                 </div>
+                <div class="health-bar">
+                    <div class="label">ROTTEN RONNIE</div>
+                    <div class="bar">
+                        <div id="p1-health" class="health"></div>
+                    </div>
+                </div>
             </div>
             <div class="controls-info">
-                <p>NERD: ← → ↑ ↓</p>
-                <p>PUNK: W A S D</p>
+                <p>LUIGI: W A S D</p>
+                <p>ROTTEN RONNIE: ← → ↑ ↓</p>
             </div>
             <div class="instructions">
                 <p>JUMP ON YOUR OPPONENT TO DEAL DAMAGE!</p>
