wheeliepoppers 1 player mode

--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
             <a href="/wheeliepoppers/" class="game-card">
                 <div class="game-icon">♿</div>
                 <div class="game-title">Wheelie Poppers</div>
-                <div class="game-description">Epic wheelchair fighting game with stomp mechanics!</div>
+                <div class="game-description">Rotten Ronnie VS. Luigi</div>
             </a>
         </div>
     </div>
